--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,7 +1,25 @@
-.DigitButton {
+.calculator-grid {
+  display: grid;
+}
+.output {
+  background: hsl(224, 36%, 15%);
+  border-radius: 0.25rem;
+  color: hsl(0, 0%, 100%);
   font-weight: bolder;
+  font-size: 700;
+  margin: 1rem 0;
+  text-align: right;
+  padding: 1.5rem;
+}
+.bottom-screen {
+  background: hsl(223, 31%, 20%);
+  border-radius: 0.25rem;
+  display: grid;
+  grid-template-columns: 60px 60px 60px 60px;
+  padding: 1rem 1rem;
 }
 
 body {
-  background: blue;
+  background: hsl(222, 26%, 31%);
+  color: hsl(0, 0%, 100%);
 }
