--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,12 +1,14 @@
 .calculator-grid {
   display: grid;
+  padding-left: 35%;
+  width: 300px;
 }
 .output {
   background: hsl(224, 36%, 15%);
   border-radius: 0.25rem;
   color: hsl(0, 0%, 100%);
   font-weight: bolder;
-  font-size: 700;
+  font-size: x-large;
   margin: 1rem 0;
   text-align: right;
   padding: 1.5rem;
@@ -22,4 +24,5 @@
 body {
   background: hsl(222, 26%, 31%);
   color: hsl(0, 0%, 100%);
+  font-family: "League Spartan", sans-serif;
 }
