all buttons are correct now

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -9,15 +9,16 @@
   color: hsl(0, 0%, 100%);
   font-weight: bolder;
   font-size: x-large;
+  height: 1.5rem;
   margin: 1rem 0;
-  text-align: right;
   padding: 1.5rem;
+  text-align: right;
 }
 .bottom-screen {
   background: hsl(223, 31%, 20%);
   border-radius: 0.25rem;
   display: grid;
-  grid-template-columns: 60px 60px 60px 60px;
+  grid-template-columns: 25% 25% 25% 25%;
   padding: 1rem 1rem;
 }
 
